--- a/clientsrc/public/index.html
+++ b/clientsrc/public/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/870e3c44f7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>bug-lyfe</title>
   </head>
   <body>
